--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "illuminate/support": "^9.0"
     },
     "require-dev": {
-        "laravel/sail": "^1.9",
-        "orchestra/testbench": "^6.19",
-        "phpunit/phpunit": "^9.5"
+        "laravel/sail": "^1.13",
+        "orchestra/testbench": "^v7.6.0",
+        "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
         "psr-4": {
